Change span max-width to window size to fix list
Text was going off screen instead of wrapping

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,3 +2,7 @@
 body {
   min-height: 100vh;
 }
+
+span {
+  max-width: 100vw;
+}
